--- a/README
+++ b/README
@@ -33,6 +33,12 @@ the DISPLAY environment variable is set correctly, e.g.:
 (This will start dwm on display :1 of the host foo.bar.)
 
 In order to display status info in the bar, you can do something
+
+patches added:
+actualfullscreen
+alpha
+dmenumatchtop
+preserveonrestart
 like this in your .xinitrc:
 
     while xsetroot -name "`date` `uptime | sed 's/.*,//'`"
